# bib-studies

./: .gitignore  CMakeLists.txt  README.md  drawhits.py  plot_all_subdetectors.py  setup.sh
.github/workflows/: test.yml
detectors_dicts/: ALLEGRO_o1_v03_DetectorDimensions.json  ALLEGRO_o1_v03_assumptions.json
plotting/: ALLEGRO_o1_v03_DetectorDimensions.json  README.md  drawhits.py  drawparticles.py  hits2bw.py  hits2highLevelEstimations.py  plot_all_subdetectors.py  xml2json.py
python/: ALLEGRO.py  CLD.py  IDEA.py  ILD_FCCee.py  constants.py  helpers.py  visualization.py
scripts/: condor_submit_pairs.py
simulation/: README.md  pg_calo_calib.sh  set_vertex_000.py  submit_pairs.py
templates/: ALLEGRO_o1_v03_assumptions.json
tests/: full_chain_example_for_tests.sh
